@@ -1,5 +1,10 @@
 2007-09-21  Mike Kestner  <mkestner@novell.com>
 
+	* glib/Object.cs: add ctor (), which invokes CreateNativeObject
+	to allow direct subclasses that do all the registration automatically.
+
+2007-09-21  Mike Kestner  <mkestner@novell.com>
+
 	* generator/*.cs: add DefaultValue prop for obtaining a
 	sane value when we need to return a value but something bad has 
 	happened such that we can't get a real value.  Needed for iface
